src/objects/Account_Number__c.object
<CustomObject>
    <fields>
        <fullName>CustomerID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Documents_Not_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documents Not Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documents_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documents Verified</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Number</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ACNT-{0000000000}</displayFormat>
        <label>Account Number Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>